--- a/css/layout.css
+++ b/css/layout.css
@@ -63,7 +63,6 @@ li {
 
 .header {
     width: 100%;
-    position: relative;
 }
 
 .nav-bar {
@@ -174,12 +173,12 @@ li {
 
 
 .footer {
-    padding-bottom: 50px;
+    padding: 50px 0;
     background-color: var(--light-orange);
 }
 
 .footer-wrapper {
-    padding: 30px;
+    /* padding: 30px; */
 }
 
 .footer-wrapper .section-title {
