--- a/css/layout.css
+++ b/css/layout.css
@@ -172,14 +172,70 @@ li {
 }
 
 
+.banner-section {
+    padding: 50px 0;
+}
+
+.banner-section .banner-wrapper {
+    width: 100%;
+    padding: 90px 30px;
+    border-radius: 20px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: relative;
+    overflow: hidden;
+}
+
+.banner-section .banner-wrapper .banner-overlay {
+    width: 100%;
+    height: 100%;
+    background-color: var(--main-orange);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    opacity: 0.5;
+}
+
+.banner-section .banner-wrapper .banner-title {
+    font-size: 60px;
+    font-weight: 400;
+    text-transform: capitalize;
+    text-align: center;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 200;
+    transform: translate(-50%, -50%);
+}
+
+.banner-section .banner-destinations {
+    background-image: url("../images/banner/banner-land.jpg");
+}
+
+.banner-section .banner-activtes {
+    background-image: url("../images/banner/banner-land.jpg");
+}
+
+.banner-section .banner-contact {
+    background-image: url("../images/banner/banner-land.jpg");
+}
+
+.banner-section .banner-destinations {
+    background-image: url("../images/banner/banner-land.jpg");
+}
+
+
 .footer {
     padding: 50px 0;
     background-color: var(--light-orange);
 }
 
-.footer-wrapper {
-    /* padding: 30px; */
-}
+/* .footer-wrapper {
+    padding: 30px;
+} */
 
 .footer-wrapper .section-title {
     margin-bottom: 20px;
