--- a/css/activite.css
+++ b/css/activite.css
@@ -9,6 +9,7 @@
 }
 
 .nos-activite .activities-cards .activity-card {
+    width: 100%;
     height: 350px;
     border-radius: 15px;
     background-image: url("../images/balloons.jpg");
@@ -38,4 +39,11 @@
 .nos-activite .activities-cards .activity-card .activity-card-description .activity-text {
     margin: 15px 0;
     font-size: 16px;
+}
+
+@media only screen and ( max-width: 600px ) {
+    .nos-activite .activities-cards {
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 20px;
+    }
 }
